--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,11 @@
-TgCrypto==1.2.3
 captcha==0.4
-Telethon==1.23.0
+greenlet==1.1.2
+Pillow==9.1.0
+pyaes==1.6.1
+pyasn1==0.4.8
 Pyrogram==1.4.9
+PySocks==1.7.1
+rsa==4.8
+SQLAlchemy==1.4.35
+Telethon==1.23.0
+TgCrypto==1.2.3
