--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,14 @@
+autopep8==1.6.0
 captcha==0.4
 greenlet==1.1.2
+mysqlclient==2.1.0
 Pillow==9.1.0
 pyaes==1.6.1
 pyasn1==0.4.8
+pycodestyle==2.8.0
 Pyrogram==1.4.9
 PySocks==1.7.1
 rsa==4.8
 SQLAlchemy==1.4.35
 TgCrypto==1.2.3
+toml==0.10.2
